# qtutils

./: CMakeLists.txt  LICENSE  singleinstance.cpp
include/qtutils/: singleinstance.hpp
